--- a/src/routes/projectsPage.scss
+++ b/src/routes/projectsPage.scss
@@ -10,12 +10,11 @@
 						 "pieces";
 	box-shadow: 5px 15px 25px 2px hsla(0,100%,0%,.15);
 
-	&--title{
+	&__title{
 		@include mainFont;
 		font-size: 150px;
 		padding: auto 0px;
-		
-		&_buttons{
+		&--buttons{
 			grid-area: title;
 			display: inline;
 			float: right;
@@ -32,6 +31,7 @@
 	padding-bottom: 150px;
 	overflow-y: auto;
 	scroll-behavior: smooth;
+	border: 10px blue solid;
 }
 .projectsComponent{
 	
@@ -42,48 +42,56 @@
 	justify-content: space-between;
 	border-bottom: 15px hsla(0,50%,0%,.25) solid;
 	overflow: hidden;
-	&--descriptionSection{
+	//border: 8px purple solid;
+	&__descriptionSection{
 		order:1;
 		padding: 30px 15px;
 		@include minorFont;
 		font-size: 1.5rem;
 		width: clamp(25%,800px,75%);
+		border: 15px red solid;
 		& > h2{
 			letter-spacing: .5px;
 			color: $highlightMenuLetters;
+			//border: 10px blue solid;
 		}
-		&_goal{
+		& >*{
+			margin-left: 25px;
+		}
+		&--goal{
 			margin-bottom: 20px;
+			//border: 5px white solid;
 		}
-		&_description{
-			margin-bottom: 20px;	
+		&--description{
+			margin-bottom: 20px;
+			//border: 5px white solid;	
 		}
 	}
-	&--workSection{
+	&__workSection{
 		flex-grow: 1;
 		order:2;
 		padding: 15px;
 		font-size:6rem;
 		@include mainFont;
-		&_title{
-
-		}
-		&_screenshot{
+		
+		&--screenshot{
 			margin: 10px auto;
 			width: 100%;
+			//border: 5px white solid;
 			box-shadow: 0px 5px 10px 5px hsla(0,100%,0%,.5);
 		}
-		&---links{
+		&--links{
 			display: flex;
 			width: 100%;
 			height: 50px;
 			justify-content: center;
 			align-items: space-around;
+			margin-bottom: 15px;
 			&_url{
 				text-decoration: none;
 				@include minorFont;
 				color: $menuLetters;
-				font-size: 3rem;
+				font-size: 2rem;
 				margin: 25px;
 			}
 		}
